<resources>
    <string name="app_name">My Application</string>
    <string name="no_camera_access">please grant camera permissions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="create_new">create_new</string>
    <string name="open">open</string>
    <string name="home_page">Home page</string>
    <string name="patterns">patterns</string>
    <string name="Home" />
    <string name="live_streaming">Live Streaming</string>
    <string name="title_activity_pattern">PatternActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pattern_1">pattern-1</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="join_us">Join us</string>
    <string name="get_access_to_dance_bot">Get access to Dance bot</string>
    <string name="Drawing" />
    <string name="draw_switch" />
    <string name="gallery">Gallery</string>
    <string name="to_pick">To PICK</string>
    <string name="switch_button_title">switch_button_title</string>
    <string name="brightness">brightness</string>
</resources>